--- a/bundles.html
+++ b/bundles.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.thewoobles.com/bundles">
   <title>Crochet Kit Bundles | Save on The Woobles Starter & Themed Sets</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
