--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.thewoobles.com/gallery">
   <title>Customer Creations Gallery | The Woobles Crochet Community</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
