--- a/merchandise.html
+++ b/merchandise.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.thewoobles.com/merchandise">
   <title>Woobles Merchandise | Apparel, Accessories & Tools for Crochet Lovers</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -74,7 +74,7 @@
       <p>Discover stylish and comfortable clothing that showcases your love for crochet.</p>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="/images/Apparel1.jpeg" alt="Woobles-themed hoodie" loading="lazy">
+          <img src="images/Apparel1.jpeg" alt="Woobles-themed hoodie" loading="lazy">
           <div class="gallery-item-content">
             <h3>Woobles Hoodie</h3>
             <p>Soft, cozy hoodie perfect for all seasons.</p>
