--- a/collabs.html
+++ b/collabs.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.thewoobles.com/collabs">
   <title>Exclusive Crochet Collaborations | The Woobles</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
