--- a/kits.html
+++ b/kits.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.thewoobles.com/kits">
   <title>The Woobles Crochet Kits | Beginner to Advanced Amigurumi Projects</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
