--- a/index.html
+++ b/index.html
@@ -21,43 +21,27 @@
         </a>
       </div>
       <div class="nav-links">
-        <div class="dropdown">
-          <a href="kits.html#kits">Amigurumi Kits</a>
-          <div class="dropdown-content">
-            <a href="kits.html#beginner">Beginner Friendly Crochet Kits</a>
-            <a href="kits.html#advanced">Advanced Crochet Projects</a>
-            <a href="kits.html#seasonal">Seasonal Crochet Kits</a>
-          </div>
+        <div class="navbar">
+          <a href="kits.html">Amigurumi Kits</a>
         </div>
 
-        <div class="dropdown">
-          <a href="collabs.html#collabs">Collaborations</a>
-          <div class="dropdown-content">
-            <a href="collabs.html#artists">Artist Collaborations</a>
-            <a href="collabs.html#brands">Brand Partnerships</a>
-            <a href="collabs.html#limited">Limited Edition Crochet Kits</a>
-          </div>
+        <div class="navbar">
+          <a href="collabs.html">Collaborations</a>
         </div>
 
-        <div class="dropdown">
-          <a href="bundles.html#bundles">Bundles</a>
-          <div class="dropdown-content">
-            <a href="bundles.html#starter">Starter Crochet Bundles</a>
-            <a href="bundles.html#themed">Themed Crochet Sets</a>
-            <a href="bundles.html#special">Special Offers</a>
-          </div>
+        <div class="navbar">
+          <a href="bundles.html">Bundles</a>
         </div>
 
-        <div class="dropdown">
-          <a href="merchandise.html#merch">Merchandise</a>
-          <div class="dropdown-content">
-            <a href="merchandise.html#apparel">Crochet Apparel</a>
-            <a href="merchandise.html#accessories">Crochet Accessories</a>
-            <a href="merchandise.html#crafting">Crafting Supplies</a>
-          </div>
+        <div class="navbar">
+          <a href="merchandise.html">Merchandise</a>
         </div>
 
-        <a href="#share" class="cta-button">Share Your Creation</a>
+        <div class="navbar">
+          <a href="gallaery.html">Gallery</a>
+        </div>
+
+        <a href="login.html" class="cta-button">Login</a>
       </div>
     </nav>
   </header>
