--- a/kits.html
+++ b/kits.html
@@ -21,23 +21,27 @@
         </a>
       </div>
       <div class="nav-links">
-        <div class="dropdown">
-          <a href="kits.html#kits">Amigurumi Kits</a>
+        <div class="navbar">
+          <a href="kits.html">Amigurumi Kits</a>
         </div>
 
-        <div class="dropdown">
-          <a href="collabs.html#collabs">Collaborations</a>
+        <div class="navbar">
+          <a href="collabs.html">Collaborations</a>
         </div>
 
-        <div class="dropdown">
-          <a href="bundles.html#bundles">Bundles</a>
+        <div class="navbar">
+          <a href="bundles.html">Bundles</a>
         </div>
 
-        <div class="dropdown">
-          <a href="merchandise.html#merch">Merchandise</a>
+        <div class="navbar">
+          <a href="merchandise.html">Merchandise</a>
         </div>
 
-        <a href="#shop" class="cta-button">Shop Now</a>
+        <div class="navbar">
+          <a href="gallaery.html">Gallery</a>
+        </div>
+
+        <a href="login.html" class="cta-button">Login</a>
       </div>
     </nav>
   </header>
