changes in design

--- a/bundles.html
+++ b/bundles.html
@@ -10,37 +10,20 @@
   <link rel="canonical" href="https://www.thewoobles.com/bundles">
   <title>Crochet Kit Bundles | Save on The Woobles Starter & Themed Sets</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/bundles.css">
+ 
 </head>
 
 <body>
   <header>
     <nav>
-      <div>
-        <a class="logo" href="/">
-          The Woobles
-        </a>
-      </div>
+      <a class="logo" href="/">The Woobles</a>
       <div class="nav-links">
-        <div class="navbar">
-          <a href="kits.html">Amigurumi Kits</a>
-        </div>
-
-        <div class="navbar">
-          <a href="collabs.html">Collaborations</a>
-        </div>
-
-        <div class="navbar">
-          <a href="bundles.html">Bundles</a>
-        </div>
-
-        <div class="navbar">
-          <a href="merchandise.html">Merchandise</a>
-        </div>
-
-        <div class="navbar">
-          <a href="gallaery.html">Gallery</a>
-        </div>
-
+        <a href="kits.html">Amigurumi Kits</a>
+        <a href="collabs.html">Collaborations</a>
+        <a href="bundles.html">Bundles</a>
+        <a href="merchandise.html">Merchandise</a>
+        <a href="gallery.html">Gallery</a>
         <a href="login.html" class="cta-button">Login</a>
       </div>
     </nav>
@@ -54,63 +37,69 @@
 
   <main>
     <section class="section" id="starter">
-      <h2>Starter Crochet Bundles</h2>
-      <p>Begin your crochet journey with our starter bundles, featuring beginner-friendly projects and all essential tools.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/StarterBundle1.jpeg" alt="Beginner starter bundle for crochet projects" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Basic Starter Bundle</h3>
-            <p>Includes yarn, tools, and instructions to start crocheting.</p>
+      <div class="card">
+        <h2>Starter Crochet Bundles</h2>
+        <p>Begin your crochet journey with our starter bundles, featuring beginner-friendly projects and all essential tools.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/StarterBundleCollection.jpeg" alt="Beginner starter bundle for crochet projects" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Basic Starter Bundle</h3>
+              <p>Includes yarn, tools, and instructions to start crocheting.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/StarterBundle2.jpeg" alt="Starter crochet kit for easy projects" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Animal Friends Starter Kit</h3>
-            <p>Create adorable animal designs with step-by-step guidance.</p>
+          <div class="gallery-item">
+            <img src="./images/bundle.jpeg" alt="Starter crochet kit for easy projects" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Animal Friends Starter Kit</h3>
+              <p>Create adorable animal designs with step-by-step guidance.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <section class="section" id="themed">
-      <h2>Themed Crochet Bundles</h2>
-      <p>Enjoy curated bundles designed around popular themes, from animals to seasonal decorations.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/ThemedBundle1.jpeg" alt="Themed crochet kit bundle with animal designs" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Forest Friends Bundle</h3>
-            <p>Includes patterns for foxes, owls, and other woodland creatures.</p>
+      <div class="card">
+        <h2>Themed Crochet Bundles</h2>
+        <p>Enjoy curated bundles designed around popular themes, from animals to seasonal decorations.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/forestbundle.jpeg" alt="Themed crochet kit bundle with animal designs" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Forest Friends Bundle</h3>
+              <p>Includes patterns for foxes, owls, and other woodland creatures.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/ThemedBundle2.jpeg" alt="Holiday-themed crochet kit" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Holiday Decor Kit</h3>
-            <p>Create festive decorations for your home or gifts.</p>
+          <div class="gallery-item">
+            <img src="./images/holidaybundle.jpeg" alt="Holiday-themed crochet kit" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Holiday Decor Kit</h3>
+              <p>Create festive decorations for your home or gifts.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <section class="section" id="special">
-      <h2>Special Offers</h2>
-      <p>Take advantage of exclusive deals on crochet bundles with limited-time discounts.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/SpecialOffer1.jpeg" alt="Limited-time special crochet bundle" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Deluxe Crochet Set</h3>
-            <p>Save big on a complete crochet kit with premium tools and accessories.</p>
+      <div class="card">
+        <h2>Special Offers</h2>
+        <p>Take advantage of exclusive deals on crochet bundles with limited-time discounts.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/delux.jpeg" alt="Limited-time special crochet bundle" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Deluxe Crochet Set</h3>
+              <p>Save big on a complete crochet kit with premium tools and accessories.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/SpecialOffer2.jpeg" alt="Discounted crochet kit" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Exclusive Discount Bundle</h3>
-            <p>Perfect for gift-giving or expanding your crochet collection.</p>
+          <div class="gallery-item">
+            <img src="./images/chrchet.jpeg" alt="Discounted crochet kit" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Exclusive Discount Bundle</h3>
+              <p>Perfect for gift-giving or expanding your crochet collection.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -143,16 +132,4 @@
           <li><a href="#help">Help Center</a></li>
         </ul>
       </div>
-      <div class="footer-section">
-        <h3>Connect</h3>
-        <ul>
-          <li><a href="#instagram">Instagram</a></li>
-          <li><a href="#facebook">Facebook</a></li>
-          <li><a href="#twitter">Twitter</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
-</body>
-
-</html>
+      <div class
