--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="navbar">
-          <a href="gallaery.html">Gallery</a>
+          <a href="gallery.html">Gallery</a>
         </div>
 
         <a href="login.html" class="cta-button">Login</a>
@@ -55,14 +55,8 @@
 
   <main>
 
-    <section class="section" id="welcome">
-      <h2>Welcome to the Crochet Gallery</h2>
-      <p>Welcome to the Customer Creations Gallery, a vibrant showcase of the amazing and diverse crochet projects made
-        by The Woobles community. This page celebrates creativity and talent, featuring unique and heartwarming handmade crafts.</p>
-    </section>
-
     <section class="section" id="inspiration">
-      <h2>Crochet Inspiration and Creativity</h2>
+      <h2>Crochet Inspiration</h2>
       <div class="gallery-grid">
         <div class="gallery-item">
           <img src="/images/CommunityWorkshop.jpeg" alt="Community crochet workshop with colorful yarn projects" loading="lazy">
@@ -89,11 +83,12 @@
     </section>
 
     <section class="section" id="share">
-      <h2>Share Your Crochet Creations</h2>
-      <p>We love seeing what our customers make with their Woobles kits! Share your projects with our community and
-        inspire others with your creativity.</p>
-      <br>
-      <a href="#upload" class="cta-button">Upload Your Crochet Project</a>
+      <div class="card-project">
+        <h2>Share Your Crochet Creations</h2>
+        <p>We love seeing what our customers make with their Woobles kits! Share your projects with our community and inspire others with your creativity.</p>
+        <br>
+        <a href="#upload" class="cta-button">Upload Your Crochet Project</a>
+      </div>
     </section>
   </main>
 
