--- a/merchandise.html
+++ b/merchandise.html
@@ -10,6 +10,7 @@
   <link rel="canonical" href="https://www.thewoobles.com/merchandise">
   <title>Woobles Merchandise | Apparel, Accessories & Tools for Crochet Lovers</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/merchandise.css">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
         </div>
 
         <div class="navbar">
-          <a href="gallaery.html">Gallery</a>
+          <a href="gallery.html">Gallery</a>
         </div>
 
         <a href="login.html" class="cta-button">Login</a>
@@ -54,63 +55,69 @@
 
   <main>
     <section class="section" id="apparel">
-      <h2>Exclusive Crochet Apparel</h2>
-      <p>Discover stylish and comfortable clothing that showcases your love for crochet.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="images/Apparel1.jpeg" alt="Woobles-themed hoodie" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Woobles Hoodie</h3>
-            <p>Soft, cozy hoodie perfect for all seasons.</p>
+      <div class="card">
+        <h2>Exclusive Crochet Apparel</h2>
+        <p>Discover stylish and comfortable clothing that showcases your love for crochet.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/hoodie.jpeg" alt="Woobles-themed hoodie" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Woobles Hoodie</h3>
+              <p>Soft, cozy hoodie perfect for all seasons.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/Apparel2.jpeg" alt="Crochet-themed T-shirt" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Crochet T-Shirt</h3>
-            <p>Casual and fun T-shirt for everyday wear.</p>
+          <div class="gallery-item">
+            <img src="./images/t-shirt.jpeg" alt="Crochet-themed T-shirt" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Crochet T-Shirt</h3>
+              <p>Casual and fun T-shirt for everyday wear.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <section class="section" id="accessories">
-      <h2>Crochet Accessories</h2>
-      <p>Find bags, pins, and other accessories to complement your crochet lifestyle.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/Accessories1.jpeg" alt="Woobles tote bag" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Woobles Tote Bag</h3>
-            <p>Stylish and spacious for all your supplies.</p>
+      <div class="card">
+        <h2>Crochet Accessories</h2>
+        <p>Find bags, pins, and other accessories to complement your crochet lifestyle.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/bag.jpeg" alt="Woobles tote bag" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Woobles Tote Bag</h3>
+              <p>Stylish and spacious for all your supplies.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/Accessories2.jpeg" alt="Set of crochet-themed pins" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Crochet Pins</h3>
-            <p>Decorative pins to showcase your crochet love.</p>
+          <div class="gallery-item">
+            <img src="./images/pins.jpeg" alt="Set of crochet-themed pins" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Crochet Pins</h3>
+              <p>Decorative pins to showcase your crochet love.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <section class="section" id="tools">
-      <h2>Premium Crafting Tools</h2>
-      <p>Enhance your crochet projects with our high-quality tools and supplies.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/Tools1.jpeg" alt="Ergonomic crochet hook set" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Ergonomic Hook Set</h3>
-            <p>Comfortable and durable hooks for every project.</p>
+      <div class="card">
+        <h2>Premium Crafting Tools</h2>
+        <p>Enhance your crochet projects with our high-quality tools and supplies.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/hookset.jpeg" alt="Ergonomic crochet hook set" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Ergonomic Hook Set</h3>
+              <p>Comfortable and durable hooks for every project.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/Tools2.jpeg" alt="Premium yarn scissors" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Yarn Scissors</h3>
-            <p>Sharp and precise scissors for all your needs.</p>
+          <div class="gallery-item">
+            <img src="./images/scciossirs.jpeg" alt="Premium yarn scissors" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Yarn Scissors</h3>
+              <p>Sharp and precise scissors for all your needs.</p>
+            </div>
           </div>
         </div>
       </div>
