--- a/kits.html
+++ b/kits.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="navbar">
-          <a href="gallaery.html">Gallery</a>
+          <a href="gallery.html">Gallery</a>
         </div>
 
         <a href="login.html" class="cta-button">Login</a>
@@ -54,63 +54,69 @@
 
   <main>
     <section class="section" id="beginner">
-      <h2>Beginner-Friendly Crochet Kits</h2>
-      <p>Get started with our easy-to-follow kits, designed for those new to crochet. Create adorable amigurumi with clear instructions and all the tools you need.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/BeginnerKit1.jpeg" alt="Beginner-friendly crochet kit featuring yarn and tools" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Starter Bunny Kit</h3>
-            <p>Learn the basics while making an adorable bunny.</p>
+      <div class="card">
+        <h2>Beginner-Friendly Crochet Kits</h2>
+        <p>Get started with our easy-to-follow kits, designed for those new to crochet. Create adorable amigurumi with clear instructions and all the tools you need.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/Bags,pins,andcreativeadd-ons.jpeg" alt="Beginner-friendly crochet kit featuring yarn and tools" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Starter Bunny Kit</h3>
+              <p>Learn the basics while making an adorable bunny.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/BeginnerKit2.jpeg" alt="Beginner-friendly crochet kit for kids" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>First Steps Crochet Kit</h3>
-            <p>Perfect for children and adults starting their crochet journey.</p>
+          <div class="gallery-item">
+            <img src="./images/kidschrochetkits.jpeg" alt="Beginner-friendly crochet kit for kids" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>First Steps Crochet Kit</h3>
+              <p>Perfect for children and adults starting their crochet journey.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-
+    
     <section class="section" id="advanced">
-      <h2>Advanced Crochet Kits</h2>
-      <p>Take your crochet skills to the next level with challenging and rewarding projects. Perfect for seasoned crafters looking for unique designs.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/AdvancedKit1.jpeg" alt="Advanced crochet kit with intricate patterns" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Fox and Owl Duo</h3>
-            <p>Create a pair of charming woodland creatures.</p>
+      <div class="card">
+        <h2>Advanced Crochet Kits</h2>
+        <p>Take your crochet skills to the next level with challenging and rewarding projects. Perfect for seasoned crafters looking for unique designs.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/advancedkit.jpeg" alt="Advanced crochet kit with intricate patterns" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Fox and Owl Duo</h3>
+              <p>Create a pair of charming woodland creatures.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/AdvancedKit2.jpeg" alt="Crochet kit with detailed amigurumi patterns" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Mandala Blanket Kit</h3>
-            <p>Master advanced techniques with this intricate project.</p>
+          <div class="gallery-item">
+            <img src="./images/mandalakit.jpeg" alt="Crochet kit with detailed amigurumi patterns" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Mandala Blanket Kit</h3>
+              <p>Master advanced techniques with this intricate project.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-
+    
     <section class="section" id="seasonal">
-      <h2>Seasonal Crochet Kits</h2>
-      <p>Celebrate the seasons with themed crochet kits. From festive designs to cozy winter projects, find the perfect kit for any time of year.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="/images/SeasonalKit1.jpeg" alt="Winter-themed crochet kit" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Snowman Kit</h3>
-            <p>Create a cute snowman perfect for winter decor.</p>
+      <div class="card">
+        <h2>Seasonal Crochet Kits</h2>
+        <p>Celebrate the seasons with themed crochet kits. From festive designs to cozy winter projects, find the perfect kit for any time of year.</p>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="./images/snowmankit.jpeg" alt="Winter-themed crochet kit" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Snowman Kit</h3>
+              <p>Create a cute snowman perfect for winter decor.</p>
+            </div>
           </div>
-        </div>
-        <div class="gallery-item">
-          <img src="/images/SeasonalKit2.jpeg" alt="Spring-themed crochet kit with flowers" loading="lazy">
-          <div class="gallery-item-content">
-            <h3>Spring Bloom Kit</h3>
-            <p>Welcome spring with vibrant crochet flowers.</p>
+          <div class="gallery-item">
+            <img src="./images/springbloomkit.jpeg" alt="Spring-themed crochet kit with flowers" loading="lazy">
+            <div class="gallery-item-content">
+              <h3>Spring Bloom Kit</h3>
+              <p>Welcome spring with vibrant crochet flowers.</p>
+            </div>
           </div>
         </div>
       </div>
