add google anaytics script

--- a/bundles.html
+++ b/bundles.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S390PK6LRV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S390PK6LRV');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Discover exclusive crochet kit bundles from The Woobles. Save money with starter sets, themed bundles, and special offers. Perfect for crochet enthusiasts of all levels.">
