--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <!--  -->
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S390PK6LRV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S390PK6LRV');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Discover crochet projects and kits for all skill levels. Explore handmade crafts, learn new techniques, and join The Woobles crochet community.">
