--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Discover crochet projects and kits for all skill levels. Explore handmade crafts, learn new techniques, and join The Woobles crochet community.">
-  <meta name="keywords" content="crochet community, handmade crafts, crochet projects, beginner crochet kits, advanced crochet techniques">
+  <meta name="keywords" content="Crochet Gallery, Customer Creations, Crochet Inspiration, Amigurumi Projects, Handmade Crafts, Crochet Community, Crochet Ideas, DIY Crochet, Crochet Workshop,  Crochet Techniques, Vibrant Yarn Crafts, Cozy Crochet Creations">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.thewoobles.com/gallery">
   <title>Customer Creations Gallery | The Woobles Crochet Community</title>
