--- a/kits.html
+++ b/kits.html
@@ -71,14 +71,14 @@
             <img src="./images/Bags,pins,andcreativeadd-ons.jpeg" alt="Beginner-friendly crochet kit featuring yarn and tools" loading="lazy">
             <div class="gallery-item-content">
               <h3>Starter Bunny Kit</h3>
-              <p>Learn the basics while making an adorable bunny.</p>
+              <p>Our crochet amigurumi kits are designed with your convenience in mind. Each kit includes premium yarn that is soft, vibrant, and durable, ensuring that your creations are not only beautiful but also last for years. The crochet hook provided is the perfect size for your project, making it easy to crochet even the smallest details. </p>
             </div>
           </div>
           <div class="gallery-item">
             <img src="./images/kidschrochetkits.jpeg" alt="Beginner-friendly crochet kit for kids" loading="lazy">
             <div class="gallery-item-content">
               <h3>First Steps Crochet Kit</h3>
-              <p>Perfect for children and adults starting their crochet journey.</p>
+              <p>our kits come with step-by-step instructions that are clear and detailed, with accompanying photos and videos to ensure your success, whether you’re a beginner or an experienced crocheter. As Emily, a happy customer, shared, "The step-by-step instructions with photos made it so easy to follow along. I felt supported through every stitch."</p>
             </div>
           </div>
         </div>
@@ -94,14 +94,14 @@
             <img src="./images/advancedkit.jpeg" alt="Advanced crochet kit with intricate patterns" loading="lazy">
             <div class="gallery-item-content">
               <h3>Fox and Owl Duo</h3>
-              <p>Create a pair of charming woodland creatures.</p>
+              <p>The Woobles offers a wide variety of amigurumi designs, each one cuter than the last. Our collection includes a range of animals and characters that will capture your heart. Sunny the Bunny, with its long ears and fluffy tail, is a favorite among our customers and perfect for Easter gifts or for anyone who loves bunnies. Felix the Fox, with its sly charm and personality, is a great project for intermediate crocheters looking to add some flair to their collection..</p>
             </div>
           </div>
           <div class="gallery-item">
             <img src="./images/mandalakit.jpeg" alt="Crochet kit with detailed amigurumi patterns" loading="lazy">
             <div class="gallery-item-content">
               <h3>Mandala Blanket Kit</h3>
-              <p>Master advanced techniques with this intricate project.</p>
+              <p>Sunny the Bunny, with its long ears and fluffy tail, is a favorite among our customers and perfect for Easter gifts or for anyone who loves bunnies. Felix the Fox, with its sly charm and personality, is a great project for intermediate crocheters looking to add some flair to their collection. Lulu the Llama, with its adorable pom-pom tail and colorful saddle, is a fun and whimsical project that’s sure to bring a smile to your face. Oliver the Owl, perfect for book lovers and night owls alike, is a rewarding project for advanced crafters with its intricate details. </p>
             </div>
           </div>
         </div>
@@ -117,14 +117,14 @@
             <img src="./images/snowmankit.jpeg" alt="Winter-themed crochet kit" loading="lazy">
             <div class="gallery-item-content">
               <h3>Snowman Kit</h3>
-              <p>Create a cute snowman perfect for winter decor.</p>
+              <p>Seasonal crochet kits are perfect for crafters looking to create unique, handmade items for different holidays or seasons. These kits typically include all the materials needed, such as yarn, hooks, patterns, and instructions, to make projects like festive decorations, cozy blankets, or gift items.</p>
             </div>
           </div>
           <div class="gallery-item">
             <img src="./images/springbloomkit.jpeg" alt="Spring-themed crochet kit with flowers" loading="lazy">
             <div class="gallery-item-content">
               <h3>Spring Bloom Kit</h3>
-              <p>Welcome spring with vibrant crochet flowers.</p>
+              <p>it’s a winter-themed scarf, springtime flowers, or autumn-inspired pumpkins, seasonal crochet kits offer a fun and creative way to celebrate the changing seasons and holidays. They are ideal for both beginners and experienced crocheters, making them a great gift or personal project to enjoy throughout the year</p>
             </div>
           </div>
         </div>
