--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
           <img src="/images/CommunityWorkshop.jpeg" alt="Community crochet workshop with colorful yarn projects" loading="lazy">
           <div class="gallery-item-content">
             <h3>Community Workshop</h3>
-            <p>Join our weekly crochet workshops and learn new techniques with fellow crafters.</p>
+            <p>A community workshop is a collaborative event designed to bring people together to share knowledge, skills, and resources on a particular topic. These workshops foster an interactive environment where participants can engage in hands-on learning, ask questions, and gain practical insights.</p>
           </div>
         </div>
         <div class="gallery-item">
           <img src="/images/FeaturedProjects.jpeg" alt="Display of colorful completed crochet projects" loading="lazy">
           <div class="gallery-item-content">
             <h3>Featured Crochet Projects</h3>
-            <p>Explore our community's most creative and inspiring crochet projects.</p>
+            <p>Featured crochet projects showcase a variety of creative and intricate designs that highlight the versatility of crochet. From cozy blankets and stylish scarves to intricate lace shawls and vibrant home decor, these projects offer something for every skill level. </p>
           </div>
         </div>
         <div class="gallery-item">
           <img src="/images/TechniqueSpotlight.jpeg" alt="Close-up view of advanced crochet techniques" loading="lazy">
           <div class="gallery-item-content">
             <h3>Technique Spotlight</h3>
-            <p>Learn advanced crochet techniques from our experienced community members.</p>
+            <p>The "Technique Spotlight" section highlights a specific method or strategy that can be applied to address a challenge or improve performance in a given field.</p>
           </div>
         </div>
       </div>
