--- a/merchandise.html
+++ b/merchandise.html
@@ -66,20 +66,20 @@
     <section class="section" id="apparel">
       <div class="card">
         <h2>Exclusive Crochet Apparel</h2>
-        <p>Discover stylish and comfortable clothing that showcases your love for crochet.</p>
+        <p>Exclusive Crochet Apparel offers a unique and artistic collection of hand-crafted clothing, combining intricate crochet techniques with modern fashion.</p>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="./images/hoodie.jpeg" alt="Woobles-themed hoodie" loading="lazy">
             <div class="gallery-item-content">
               <h3>Woobles Hoodie</h3>
-              <p>Soft, cozy hoodie perfect for all seasons.</p>
+              <p>The Woobles Hoodie is the perfect blend of comfort, style, and warmth. Made from a soft, high-quality fabric, this hoodie features a cozy, relaxed fit, making it an ideal choice for lounging or casual outings.</p>
             </div>
           </div>
           <div class="gallery-item">
             <img src="./images/t-shirt.jpeg" alt="Crochet-themed T-shirt" loading="lazy">
             <div class="gallery-item-content">
               <h3>Crochet T-Shirt</h3>
-              <p>Casual and fun T-shirt for everyday wear.</p>
+              <p>A crochet T-shirt combines the art of crochet with modern fashion, creating a unique and stylish garment. ypically made with lightweight yarns like cotton or bamboo, crochet T-shirts are breathable and comfortable, perfect for warmer weather.</p>
             </div>
           </div>
         </div>
@@ -95,14 +95,14 @@
             <img src="./images/bag.jpeg" alt="Woobles tote bag" loading="lazy">
             <div class="gallery-item-content">
               <h3>Woobles Tote Bag</h3>
-              <p>Stylish and spacious for all your supplies.</p>
+              <p>The Woobles Tote Bag is a stylish and practical accessory designed for everyday use. Made with durable, eco-friendly materials, it offers ample space for all your essentials, whether you're heading to the beach, running errands, or attending a casual outing.</p>
             </div>
           </div>
           <div class="gallery-item">
             <img src="./images/pins.jpeg" alt="Set of crochet-themed pins" loading="lazy">
             <div class="gallery-item-content">
               <h3>Crochet Pins</h3>
-              <p>Decorative pins to showcase your crochet love.</p>
+              <p>Crochet pins, often referred to as stitch markers, are essential tools for crocheting, helping crafters keep track of stitch patterns, rows, and increases or decreases.</p>
             </div>
           </div>
         </div>
@@ -112,20 +112,20 @@
     <section class="section" id="tools">
       <div class="card">
         <h2>Premium Crafting Tools</h2>
-        <p>Enhance your crochet projects with our high-quality tools and supplies.</p>
+        <p>Premium crafting tools are designed for artisans and hobbyists who demand precision, durability, and comfort. These tools are made from high-quality materials, such as stainless steel, titanium, and ergonomic handles, ensuring a superior crafting experience</p>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="./images/hookset.jpeg" alt="Ergonomic crochet hook set" loading="lazy">
             <div class="gallery-item-content">
               <h3>Ergonomic Hook Set</h3>
-              <p>Comfortable and durable hooks for every project.</p>
+              <p>An ergonomic hook set is designed to provide enhanced comfort and ease of use by incorporating features that reduce strain and fatigue during extended use.</p>
             </div>
           </div>
           <div class="gallery-item">
             <img src="./images/scciossirs.jpeg" alt="Premium yarn scissors" loading="lazy">
             <div class="gallery-item-content">
               <h3>Yarn Scissors</h3>
-              <p>Sharp and precise scissors for all your needs.</p>
+              <p>Yarn scissors are specialized cutting tools designed for precision and ease when working with yarn and thread. These scissors typically feature sharp, fine-tipped blades that allow crafters to make clean cuts without fraying or damaging delicate yarn fibers.</p>
             </div>
           </div>
         </div>
