--- a/bundles.html
+++ b/bundles.html
@@ -48,7 +48,7 @@
     <section class="section" id="starter">
       <div class="card">
         <h2>Starter Crochet Bundles</h2>
-        <p>Begin your crochet journey with our starter bundles, featuring beginner-friendly projects and all essential tools.</p>
+        <p>Starter crochet bundles are the perfect way for beginners to dive into the world of crochet. These bundles typically include all the essential tools and materials needed to get started, such as yarn in various colors, crochet hooks, and easy-to-follow instructions or patterns.</p>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="./images/StarterBundleCollection.jpeg" alt="Beginner starter bundle for crochet projects" loading="lazy">
@@ -71,7 +71,7 @@
     <section class="section" id="themed">
       <div class="card">
         <h2>Themed Crochet Bundles</h2>
-        <p>Enjoy curated bundles designed around popular themes, from animals to seasonal decorations.</p>
+        <p>Themed crochet bundles offer a unique and creative way to craft beautiful, coordinated projects with ease. These bundles typically include a curated selection of yarns, patterns, and accessories that follow a specific theme, such as seasonal motifs, holiday decorations, or nature-inspired designs.</p>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="./images/forestbundle.jpeg" alt="Themed crochet kit bundle with animal designs" loading="lazy">
@@ -94,7 +94,7 @@
     <section class="section" id="special">
       <div class="card">
         <h2>Special Offers</h2>
-        <p>Take advantage of exclusive deals on crochet bundles with limited-time discounts.</p>
+        <p>Take advantage of our exclusive Special Offers available for a limited time! Whether you're looking for discounts on our premium products or bundled deals that offer incredible value, our special offers are designed to help you get the most for your money.</p>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="./images/delux.jpeg" alt="Limited-time special crochet bundle" loading="lazy">
